[package]
name = "drue"
version = "0.1.0"
authors = ["Finnkauski <iwiivi@gmail.com>"]
edition = "2018"
default-run = "drue"
description=""
license="AGPL-3.0-or-later"
homepage="https://finnkauski.com"
documentation="https://docs.rs/drue/"
repository="https://github.com/finnkauski/drue"

[dependencies]
midir = "*"
clap = "*"
huemanity = "0.1.5"
serde_json = "*"
